añadida base de datos sqlite en fichero al proyecto y modificacion del repostory para trabajar con bbdd tambien

--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -2,3 +2,7 @@ data.directory=data
 backup.directory=backup
 input.formats=CSV,XML,JSON
 output.formats=CSV,XML,JSON,BIN
+database.url=jdbc:sqlite:equipo.db
+database.init.tables=true
+database.init.data=true
+storage.data=data
