--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -1,7 +1,7 @@
 data.directory=data
 backup.directory=backup
 input.formats=CSV,XML,JSON
-output.formats=CSV,XML,JSON,BIN
+output.formats=CSV,XML,JSON
 database.url=jdbc:sqlite:equipo.db
 database.init.tables=true
 database.init.data=true
